lenguajeutbParser.py
# Generated from C:/Users/foroz/Desktop/Compilador\lenguajeutb.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class lenguajeutbParser ( Parser ):

    grammarFileName = "lenguajeutb.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'sino'", "'entonces'", "'mostrar_en_pantalla'", 
                     "','", "'inicio_para'", "'fin_para'", "'mientras'", 
                     "'fin_mientras'", "'si'", "'fin_si'", "'es_mayor_que'", 
                     "'es_mayor_o_igual_que'", "'es_menor_que'", "'es_menor_o_igual_que'", 
                     "'es_igual_que'", "'no_es_igual_a'", "'por'", "'cambiar_valor_de'", 
                     "'Nombre_del_ejercicio'", "<INVALID>", "'variables'", 
                     "'fin_variables'", "'Flujo'", "'fin_flujo'", "'valor'", 
                     "'de'", "'agregar'", "'<-'", "'cambiar'", "'en_la_posicion'", 
                     "'en_la_coordenada'", "<INVALID>", "'convertir'", "'a'", 
                     "'leer'", "'tipo'", "'lista_de_entero'", "'lista_de_real'", 
                     "'lista_de_booleano'", "'lista_de_texto'", "'matriz_de_entero'", 
                     "'matriz_de_real'", "'matriz_de_booleano'", "'matriz_de_texto'", 
                     "'entero'", "'real'", "'booleano'", "'texto'", "'en'", 
                     "'nombre'", "'valor_inicial'", "'tamano'", "'x'", "'('", 
                     "')'", "'o'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "SINO", "ENTONCES", "MOSTRAR_EN_PANTALLA", 
                      "COMA", "INICIO_PARA", "FIN_PARA", "INICIO_MIENTRAS", 
                      "FIN_MIENTRAS", "INICIO_SI", "FIN_SI", "MAYOR", "MAYOR_IGUAL", 
                      "MENOR", "MENOR_IGUAL", "IGUAL", "DESIGUALDA", "POR", 
                      "CAMBIAR_VALOR_DE", "NOMBRE_EJERCICIO", "NOTA", "VARIABLES", 
                      "FIN_VARIABLES", "FLUJO", "FIN_FLUJO", "VALOR", "DE", 
                      "AGREGAR", "OP_POSC", "CAMBIAR", "EN_POSICION", "EN_COORDENADA", 
                      "COORDENADA", "CONVERTIR", "A", "LEER", "TIPO", "TIPO_LISTA_DE_ENTERO", 
                      "TIPO_LISTA_DE_REAL", "TIPO_LISTA_DE_BOOLEANO", "TIPO_LISTA_DE_TEXTO", 
                      "TIPO_MATRIZ_DE_ENTERO", "TIPO_MATRIZ_DE_REAL", "TIPO_MATRIZ_DE_BOOLEANO", 
                      "TIPO_MATRIZ_DE_TEXTO", "TIPO_ENTERO", "TIPO_REAL", 
                      "TIPO_BOOLEANO", "TIPO_TEXTO", "EN", "NOMBRE", "VALOR_INICIAL", 
                      "TAMANO", "EQUIS", "PAR_IZQ", "PAR_DER", "O", "SUMA", 
                      "RESTA", "MULTIPLICACION", "DIVISION", "MODULO", "IDENTICO", 
                      "ENTERO", "REAL", "CHAR", "BOOL", "STRING", "COMILLAS_DOBLES", 
                      "TEXTO", "IDENTIFICADOR", "NOMBRE_PRG", "WS" ]

    RULE_start_rule = 0
    RULE_mensaje = 1
    RULE_nombre_programa = 2
    RULE_variables = 3
    RULE_declaracion = 4
    RULE_flujo = 5
    RULE_sentencias = 6
    RULE_asignacion = 7
    RULE_ciclo_para = 8
    RULE_ciclo_mientras = 9
    RULE_si = 10
    RULE_expresion = 11
    RULE_div = 12
    RULE_atom = 13
    RULE_condicion = 14
    RULE_posicion = 15
    RULE_conversion = 16
    RULE_acceso_lista = 17
    RULE_acceso_matriz = 18
    RULE_imprimir = 19

    ruleNames =  [ "start_rule", "mensaje", "nombre_programa", "variables", 
                   "declaracion", "flujo", "sentencias", "asignacion", "ciclo_para", 
                   "ciclo_mientras", "si", "expresion", "div", "atom", "condicion", 
                   "posicion", "conversion", "acceso_lista", "acceso_matriz", 
                   "imprimir" ]

    EOF = Token.EOF
    T__0=1
    SINO=2
    ENTONCES=3
    MOSTRAR_EN_PANTALLA=4
    COMA=5
    INICIO_PARA=6
    FIN_PARA=7
    INICIO_MIENTRAS=8
    FIN_MIENTRAS=9
    INICIO_SI=10
    FIN_SI=11
    MAYOR=12
    MAYOR_IGUAL=13
    MENOR=14
    MENOR_IGUAL=15
    IGUAL=16
    DESIGUALDA=17
    POR=18
    CAMBIAR_VALOR_DE=19
    NOMBRE_EJERCICIO=20
    NOTA=21
    VARIABLES=22
    FIN_VARIABLES=23
    FLUJO=24
    FIN_FLUJO=25
    VALOR=26
    DE=27
    AGREGAR=28
    OP_POSC=29
    CAMBIAR=30
    EN_POSICION=31
    EN_COORDENADA=32
    COORDENADA=33
    CONVERTIR=34
    A=35
    LEER=36
    TIPO=37
    TIPO_LISTA_DE_ENTERO=38
    TIPO_LISTA_DE_REAL=39
    TIPO_LISTA_DE_BOOLEANO=40
    TIPO_LISTA_DE_TEXTO=41
    TIPO_MATRIZ_DE_ENTERO=42
    TIPO_MATRIZ_DE_REAL=43
    TIPO_MATRIZ_DE_BOOLEANO=44
    TIPO_MATRIZ_DE_TEXTO=45
    TIPO_ENTERO=46
    TIPO_REAL=47
    TIPO_BOOLEANO=48
    TIPO_TEXTO=49
    EN=50
    NOMBRE=51
    VALOR_INICIAL=52
    TAMANO=53
    EQUIS=54
    PAR_IZQ=55
    PAR_DER=56
    O=57
    SUMA=58
    RESTA=59
    MULTIPLICACION=60
    DIVISION=61
    MODULO=62
    IDENTICO=63
    ENTERO=64
    REAL=65
    CHAR=66
    BOOL=67
    STRING=68
    COMILLAS_DOBLES=69
    TEXTO=70
    IDENTIFICADOR=71
    NOMBRE_PRG=72
    WS=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Start_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nombre_programa(self):
            return self.getTypedRuleContext(lenguajeutbParser.Nombre_programaContext,0)


        def variables(self):
            return self.getTypedRuleContext(lenguajeutbParser.VariablesContext,0)


        def flujo(self):
            return self.getTypedRuleContext(lenguajeutbParser.FlujoContext,0)


        def mensaje(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeutbParser.MensajeContext)
            else:
                return self.getTypedRuleContext(lenguajeutbParser.MensajeContext,i)


        def getRuleIndex(self):
            return lenguajeutbParser.RULE_start_rule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_rule" ):
                return visitor.visitStart_rule(self)
            else:
                return visitor.visitChildren(self)




    def start_rule(self):

        localctx = lenguajeutbParser.Start_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==lenguajeutbParser.NOTA:
                self.state = 40
                self.mensaje()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.nombre_programa()
            self.state = 47
            self.variables()
            self.state = 48
            self.flujo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MensajeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.n = None # Token

        def NOTA(self):
            return self.getToken(lenguajeutbParser.NOTA, 0)

        def getRuleIndex(self):
            return lenguajeutbParser.RULE_mensaje

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMensaje" ):
                return visitor.visitMensaje(self)
            else:
                return visitor.visitChildren(self)




    def mensaje(self):

        localctx = lenguajeutbParser.MensajeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mensaje)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            localctx.n = self.match(lenguajeutbParser.NOTA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Nombre_programaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOMBRE_EJERCICIO(self):
            return self.getToken(lenguajeutbParser.NOMBRE_EJERCICIO, 0)

        def NOMBRE_PRG(self):
            return self.getToken(lenguajeutbParser.NOMBRE_PRG, 0)

        def getRuleIndex(self):
            return lenguajeutbParser.RULE_nombre_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNombre_programa" ):
                return visitor.visitNombre_programa(self)
            else:
                return visitor.visitChildren(self)




    def nombre_programa(self):

        localctx = lenguajeutbParser.Nombre_programaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nombre_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(lenguajeutbParser.NOMBRE_EJERCICIO)
            self.state = 53
            self.match(lenguajeutbParser.NOMBRE_PRG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLES(self):
            return self.getToken(lenguajeutbParser.VARIABLES, 0)

        def FIN_VARIABLES(self):
            return self.getToken(lenguajeutbParser.FIN_VARIABLES, 0)

        def declaracion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeutbParser.DeclaracionContext)
            else:
                return self.getTypedRuleContext(lenguajeutbParser.DeclaracionContext,i)


        def getRuleIndex(self):
            return lenguajeutbParser.RULE_variables

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables" ):
                return visitor.visitVariables(self)
            else:
                return visitor.visitChildren(self)




    def variables(self):

        localctx = lenguajeutbParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(lenguajeutbParser.VARIABLES)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==lenguajeutbParser.TIPO:
                self.state = 56
                self.declaracion()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(lenguajeutbParser.FIN_VARIABLES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclaracionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.entero = None # Token
            self.v_entero = None # ExpresionContext
            self.real = None # Token
            self.v_real = None # ExpresionContext
            self.texto = None # Token
            self.v_texto = None # Token
            self.booleano = None # Token
            self.v_booleano = None # ExpresionContext
            self.lista_entero = None # Token
            self.lista_texto = None # Token
            self.lista_real = None # Token
            self.lista_booleano = None # Token
            self.matriz_booleano = None # Token
            self.matriz_texto = None # Token
            self.matriz_entero = None # Token
            self.matriz_real = None # Token

        def TIPO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO)
            else:
                return self.getToken(lenguajeutbParser.TIPO, i)

        def TIPO_ENTERO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_ENTERO)
            else:
                return self.getToken(lenguajeutbParser.TIPO_ENTERO, i)

        def NOMBRE(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.NOMBRE)
            else:
                return self.getToken(lenguajeutbParser.NOMBRE, i)

        def TIPO_REAL(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_REAL)
            else:
                return self.getToken(lenguajeutbParser.TIPO_REAL, i)

        def TIPO_TEXTO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_TEXTO)
            else:
                return self.getToken(lenguajeutbParser.TIPO_TEXTO, i)

        def TIPO_BOOLEANO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_BOOLEANO)
            else:
                return self.getToken(lenguajeutbParser.TIPO_BOOLEANO, i)

        def TIPO_LISTA_DE_ENTERO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_LISTA_DE_ENTERO)
            else:
                return self.getToken(lenguajeutbParser.TIPO_LISTA_DE_ENTERO, i)

        def TIPO_LISTA_DE_TEXTO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_LISTA_DE_TEXTO)
            else:
                return self.getToken(lenguajeutbParser.TIPO_LISTA_DE_TEXTO, i)

        def TIPO_LISTA_DE_REAL(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_LISTA_DE_REAL)
            else:
                return self.getToken(lenguajeutbParser.TIPO_LISTA_DE_REAL, i)

        def TIPO_LISTA_DE_BOOLEANO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_LISTA_DE_BOOLEANO)
            else:
                return self.getToken(lenguajeutbParser.TIPO_LISTA_DE_BOOLEANO, i)

        def TIPO_MATRIZ_DE_BOOLEANO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_MATRIZ_DE_BOOLEANO)
            else:
                return self.getToken(lenguajeutbParser.TIPO_MATRIZ_DE_BOOLEANO, i)

        def TIPO_MATRIZ_DE_TEXTO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_MATRIZ_DE_TEXTO)
            else:
                return self.getToken(lenguajeutbParser.TIPO_MATRIZ_DE_TEXTO, i)

        def TIPO_MATRIZ_DE_ENTERO(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_MATRIZ_DE_ENTERO)
            else:
                return self.getToken(lenguajeutbParser.TIPO_MATRIZ_DE_ENTERO, i)

        def TIPO_MATRIZ_DE_REAL(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.TIPO_MATRIZ_DE_REAL)
            else:
                return self.getToken(lenguajeutbParser.TIPO_MATRIZ_DE_REAL, i)

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.IDENTIFICADOR)
            else:
                return self.getToken(lenguajeutbParser.IDENTIFICADOR, i)

        def VALOR_INICIAL(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.VALOR_INICIAL)
            else:
                return self.getToken(lenguajeutbParser.VALOR_INICIAL, i)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeutbParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(lenguajeutbParser.ExpresionContext,i)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(lenguajeutbParser.STRING)
            else:
                return self.getToken(lenguajeutbParser.STRING, i)

        def getRuleIndex(self):
            return lenguajeutbParser.RULE_declaracion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = lenguajeutbParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 64
                    self.match(lenguajeutbParser.TIPO)
                    self.state = 117
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [lenguajeutbParser.TIPO_ENTERO]:
                        self.state = 65
                        self.match(lenguajeutbParser.TIPO_ENTERO)
                        self.state = 66
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 67
                        localctx.entero = self.match(lenguajeutbParser.IDENTIFICADOR)
                        self.state = 70
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==lenguajeutbParser.VALOR_INICIAL:
                            self.state = 68
                            self.match(lenguajeutbParser.VALOR_INICIAL)
                            self.state = 69
                            localctx.v_entero = self.expresion()


                        pass
                    elif token in [lenguajeutbParser.TIPO_REAL]:
                        self.state = 72
                        self.match(lenguajeutbParser.TIPO_REAL)
                        self.state = 73
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 74
                        localctx.real = self.match(lenguajeutbParser.IDENTIFICADOR)
                        self.state = 77
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==lenguajeutbParser.VALOR_INICIAL:
                            self.state = 75
                            self.match(lenguajeutbParser.VALOR_INICIAL)
                            self.state = 76
                            localctx.v_real = self.expresion()


                        pass
                    elif token in [lenguajeutbParser.TIPO_TEXTO]:
                        self.state = 79
                        self.match(lenguajeutbParser.TIPO_TEXTO)
                        self.state = 80
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 81
                        localctx.texto = self.match(lenguajeutbParser.IDENTIFICADOR)
                        self.state = 84
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==lenguajeutbParser.VALOR_INICIAL:
                            self.state = 82
                            self.match(lenguajeutbParser.VALOR_INICIAL)
                            self.state = 83
                            localctx.v_texto = self.match(lenguajeutbParser.STRING)


                        pass
                    elif token in [lenguajeutbParser.TIPO_BOOLEANO]:
                        self.state = 86
                        self.match(lenguajeutbParser.TIPO_BOOLEANO)
                        self.state = 87
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 88
                        localctx.booleano = self.match(lenguajeutbParser.IDENTIFICADOR)
                        self.state = 91
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==lenguajeutbParser.VALOR_INICIAL:
                            self.state = 89
                            self.match(lenguajeutbParser.VALOR_INICIAL)
                            self.state = 90
                            localctx.v_booleano = self.expresion()


                        pass
                    elif token in [lenguajeutbParser.TIPO_LISTA_DE_ENTERO]:
                        self.state = 93
                        self.match(lenguajeutbParser.TIPO_LISTA_DE_ENTERO)
                        self.state = 94
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 95
                        localctx.lista_entero = self.match(lenguajeutbParser.IDENTIFICADOR)
                        pass
                    elif token in [lenguajeutbParser.TIPO_LISTA_DE_TEXTO]:
                        self.state = 96
                        self.match(lenguajeutbParser.TIPO_LISTA_DE_TEXTO)
                        self.state = 97
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 98
                        localctx.lista_texto = self.match(lenguajeutbParser.IDENTIFICADOR)
                        pass
                    elif token in [lenguajeutbParser.TIPO_LISTA_DE_REAL]:
                        self.state = 99
                        self.match(lenguajeutbParser.TIPO_LISTA_DE_REAL)
                        self.state = 100
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 101
                        localctx.lista_real = self.match(lenguajeutbParser.IDENTIFICADOR)
                        pass
                    elif token in [lenguajeutbParser.TIPO_LISTA_DE_BOOLEANO]:
                        self.state = 102
                        self.match(lenguajeutbParser.TIPO_LISTA_DE_BOOLEANO)
                        self.state = 103
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 104
                        localctx.lista_booleano = self.match(lenguajeutbParser.IDENTIFICADOR)
                        pass
                    elif token in [lenguajeutbParser.TIPO_MATRIZ_DE_BOOLEANO]:
                        self.state = 105
                        self.match(lenguajeutbParser.TIPO_MATRIZ_DE_BOOLEANO)
                        self.state = 106
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 107
                        localctx.matriz_booleano = self.match(lenguajeutbParser.IDENTIFICADOR)
                        pass
                    elif token in [lenguajeutbParser.TIPO_MATRIZ_DE_TEXTO]:
                        self.state = 108
                        self.match(lenguajeutbParser.TIPO_MATRIZ_DE_TEXTO)
                        self.state = 109
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 110
                        localctx.matriz_texto = self.match(lenguajeutbParser.IDENTIFICADOR)
                        pass
                    elif token in [lenguajeutbParser.TIPO_MATRIZ_DE_ENTERO]:
                        self.state = 111
                        self.match(lenguajeutbParser.TIPO_MATRIZ_DE_ENTERO)
                        self.state = 112
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 113
                        localctx.matriz_entero = self.match(lenguajeutbParser.IDENTIFICADOR)
                        pass
                    elif token in [lenguajeutbParser.TIPO_MATRIZ_DE_REAL]:
                        self.state = 114
                        self.match(lenguajeutbParser.TIPO_MATRIZ_DE_REAL)
                        self.state = 115
                        self.match(lenguajeutbParser.NOMBRE)
                        self.state = 116
                        localctx.matriz_real = self.match(lenguajeutbParser.IDENTIFICADOR)
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 121 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FlujoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLUJO(self):
            return self.getToken(lenguajeutbParser.FLUJO, 0)

        def FIN_FLUJO(self):
            return self.getToken(lenguajeutbParser.FIN_FLUJO, 0)

        def sentencias(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lenguajeutbParser.SentenciasContext)
            else:
                return self.getTypedRuleContext(lenguajeutbParser.SentenciasContext,i)


        def getRuleIndex(self):
            return lenguajeutbParser.RULE_flujo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlujo" ):
                return visitor.visitFlujo(self)
            else:
                return visitor.visitChildren(self)




    def flujo(self):
